--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ logging.level.io.undertow=ERROR
 logging.level.org.xnio=ERROR
 logging.level.org.spingframework.web=ERROR
 logging.level.com.zaxxer.hikari=INFO
+
+#opencsv code
+spring.main.banner-mode=off
+spring.main.log-startup-info=false
+app.name=SpringBootBean
+
